--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 
 .App-header {
   background-color: #282c34;
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +36,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  background-color: #BFCBC2;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.event-text {
+  margin-top: 0px;
 }
