--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   flex-direction: column;
   justify-content: flex-start;
   gap: 1rem;
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .event-text {
